2009-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (GetOptimalKernelWidth1D, GetOptimalKernelWidth1D):
	In the Q32 build, convolution kernel size was estimated
	incorrectly for large sigmas on 32-bit systems due to arithmetic
	overflow.

2009-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): Moved here from fx.c since this
	is a more suitable place for it to be.

	* magick/enhance.c (GammaImage): Improve performance a bit.
	Preserve full precision in Q32 build.

2009-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{channel.c,constitute.c,nt_base.h}: Start using the C'99
	'restrict' keyword.

2009-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickGetImageAttribute): New method to get
	an image attribute.  Patch contributed by Mikko Koppanen.
	(MagickSetImageAttribute): New method to set an image attribute.
	Patch contributed by Mikko Koppanen.

	* magick/constitute.c (ReadImage): Log subimage and subrange.

	* configure: Update to Autoconf 2.65.

	* magick/attribute.c (GenerateIPTCAttribute): Returned IPTC string
	values were one character too short.

2009-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (AllocateImage): The documented shorthand for
	specifying image size via filename[WIDTHxHEIGHT] was not working
	for raw formats which use the image tile_info data.

2009-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (ParseSubImageSpecification): Try to match
	behavior of previous sub-image specification parser.  Some
	incantations did not produce the same results.

	* win2k/IMDisplay/res/{IMDisplay.ico, IMDisplayDoc.ico}: Replaced
	with GraphicsMagick icon prepared by Jaroslav Fojtik.

	* coders/svg.c (ReadSVGImage): Use runtime initialization of
	SAXModules rather than static initialization.

	* magick/command.c: Commands now support reading an image from